se completo el agrgar figuras al azar en el canvas y moverlas

--- a/TP1/index.html
+++ b/TP1/index.html
@@ -27,6 +27,10 @@
         <h1>Ejercicio 4</h1>
         <canvas id="gradBlancoYNegro" width="500" height="500"></canvas>
     </div>
+    <div class="container">
+        <h1>Ejercicio 5</h1>
+        <canvas id="gradTresColores" width="500" height="500"></canvas>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
